--- a/client/client.html
+++ b/client/client.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat</title>
+    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script defer src="./script.js" type="module"></script>
+
     <style>
       .chat {
         border: 1px solid rgb(93, 92, 92);
         width: 70%;
-        padding:20px 10px;
+        padding: 20px 10px;
       }
 
-      .form{
-       margin: 20px 40px;
+      .form {
+        margin: 20px 40px;
       }
       .input-container {
         margin-top: 1rem;
@@ -38,7 +41,5 @@
         </div>
       </form>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
