--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="chat">
-      <div class="message-container"></div>
+      <div id="message-container"></div>
 
       <form class="form" id="form">
         <div class="input-container">
